--- a/Game/UI/Pages/EndpointMap.xaml
+++ b/Game/UI/Pages/EndpointMap.xaml
@@ -1,15 +1,14 @@
-﻿<Page x:Class="Game.UI.EndpointMap"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:Game.UI" xmlns:wpfautogrid="clr-namespace:WpfAutoGrid;assembly=WpfAutoGrid"
-      mc:Ignorable="d"
+﻿<local:DisplayablePage
+    x:Class="Game.UI.Pages.EndpointMap"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Game.UI.Pages"
+    mc:Ignorable="d"
       d:DesignHeight="257" d:DesignWidth="498"
-      Title="EndpointMap"
-      TextElement.FontFamily="pack://application:,,,/Fonts/#W95FA">
-    <Page.Resources>
-    </Page.Resources>
+      Title="Bounce Visual Assistant"
+      TextElement.FontFamily="pack://application:,,,/Fonts/#W95FA" MinWidth="498" MinHeight="257">
     <Grid Background="Silver" Margin="0,0,0,0" ClipToBounds="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -56,4 +55,4 @@
             </Grid>
         </ContentControl>
     </Grid>
-</Page>
+</local:DisplayablePage>
